--- a/app/templates/docs/surrealql/datamodel/numbers.hbs
+++ b/app/templates/docs/surrealql/datamodel/numbers.hbs
@@ -7,7 +7,7 @@
 
 <Layout::Text text-l text-f>
     <h2>Numbers</h2>
-	<p>In SurrealDB, numbers can be one of three types. 64-bit integers, 64-bit floating point numbers, or arbitrary-length decimal numbers with infinite precision.</p>
+	<p>In SurrealDB, numbers can be one of three types. 64-bit integers, 64-bit floating point numbers, or 128-bit decimal numbers.</p>
 </Layout::Text>
 
 <Layout::Gap mini />
