Update numbers.hbs (part 4)

--- a/app/templates/docs/surrealql/datamodel/numbers.hbs
+++ b/app/templates/docs/surrealql/datamodel/numbers.hbs
@@ -35,7 +35,9 @@
 <Layout::Text text-l text-f>
 	<h3>Decimal numbers</h3>
 	<p>To use 128-bit decimal numbers when specifying numeric values, you can use the <code>dec</code> suffix.</p>
-	<Code @name="docs/datamodel/number/decimal.surql" />
+	<Code @name="docs-datamodel-number-decimal.surql">
+		CREATE product SET price = 99.99dec;
+	</Code>
 </Layout::Text>
 
 <Layout::Gap mini />
