--- a/app/templates/docs/surrealql/datamodel/numbers.hbs
+++ b/app/templates/docs/surrealql/datamodel/numbers.hbs
@@ -7,14 +7,14 @@
 
 <Layout::Text text-l text-f>
     <h2>Numbers</h2>
-	<p>In SurrealDB, numbers can be one of three types. 64-bit integers, 64-bit floating point numbers, or 128-bit decimal numbers.</p>
+	<p>In SurrealDB, numbers can be one of three types: 64-bit integers, 64-bit floating point numbers, or 128-bit decimal numbers.</p>
 </Layout::Text>
 
 <Layout::Gap mini />
 
 <Layout::Text text-l text-f>
 	<h3>Integer numbers</h3>
-	<p>If a numeric value is specified without any decimal point suffix and is within the range <code>-9223372036854775808</code> to <code>9223372036854775807</code> then the value will be parsed, stored, and treated as a 64-bit integer.</p>
+	<p>If a numeric value is specified without a decimal point and is within the range <code>-9223372036854775808</code> to <code>9223372036854775807</code> then the value will be parsed, stored, and treated as a 64-bit integer.</p>
 	<Code @name="docs-datamodel-number-integer.surql">
 		CREATE event SET year = 2022;
 	</Code>
@@ -24,7 +24,7 @@
 
 <Layout::Text text-l text-f>
 	<h3>Floating point numbers</h3>
-	<p> If a number value is specified with a decimal point suffix, or is outside of the maximum range specified above, then the number will automatically be parsed, stored, and treated as a 64-bit floating point value. This ensures efficiency when performing mathematical calculations within SurrealDB.</p>
+	<p> If a number value is specified with a decimal point, or is outside of the maximum range specified above, then the number will automatically be parsed, stored, and treated as a 64-bit floating point value. This ensures efficiency when performing mathematical calculations within SurrealDB.</p>
 	<Code @name="docs-datamodel-number-float.surql">
 		CREATE event SET temperature = 41.5;
 	</Code>
@@ -34,7 +34,7 @@
 
 <Layout::Text text-l text-f>
 	<h3>Decimal numbers</h3>
-	<p>To use 128-bit decimal numbers when specifying numeric values, you can use the <code>dec</code> suffix.</p>
+	<p>To opt into 128-bit decimal numbers when specifying numeric values, you can use the <code>dec</code> suffix.</p>
 	<Code @name="docs-datamodel-number-decimal.surql">
 		CREATE product SET price = 99.99dec;
 	</Code>
